--- a/book_rec.ipynb
+++ b/book_rec.ipynb
@@ -2,18 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter rating w/wo <rating> or random for book suggestion\n",
-      "enter to search rating 5\n",
-      "Title:   The Goon Show  Volume 4: My Knees Have Fallen Off!\n",
-      "Author:   NOT A BOOK\n",
-      "Rating:   5\n",
+      "For book recommendation/rating - enter 1 and author review - enter 2\n",
+      "Enter name of Author to display \n",
+      "Total books by this author are  20\n",
+      "Average Rating:  3.934\n",
+      "Title:  Bill Bryson's African Diary \n",
+      "    Rating:  3.44\n",
+      "Title:  Bryson's Dictionary of Troublesome Words: A Writer's Guide to Getting It Right \n",
+      "    Rating:  3.87\n",
+      "Title:  In a Sunburned Country \n",
+      "    Rating:  4.07\n",
+      "Title:  I'm a Stranger Here Myself: Notes on Returning to America After Twenty Years Away \n",
+      "    Rating:  3.9\n",
+      "Title:  The Lost Continent: Travels in Small Town America \n",
+      "    Rating:  3.83\n",
+      "Title:  Neither Here nor There: Travels in Europe \n",
+      "    Rating:  3.86\n",
+      "Title:  Notes from a Small Island \n",
+      "    Rating:  3.91\n",
+      "Title:  The Mother Tongue: English and How It Got That Way \n",
+      "    Rating:  3.93\n",
+      "Title:  A Short History of Nearly Everything \n",
+      "    Rating:  4.21\n",
+      "Title:  A Short History of Nearly Everything (Illustrated Edition) \n",
+      "    Rating:  4.21\n",
+      "Title:  A Walk in the Woods: Rediscovering America on the Appalachian Trail \n",
+      "    Rating:  4.06\n",
+      "Title:  A Walk in the Woods: Rediscovering America on the Appalachian Trail \n",
+      "    Rating:  4.06\n",
+      "Title:  The Lost Continent:  Travels in Small-town America \n",
+      "    Rating:  3.83\n",
+      "Title:  Made in America: An Informal History of the English Language in the United States \n",
+      "    Rating:  3.91\n",
+      "Title:  Bill Bryson's African Diary \n",
+      "    Rating:  3.44\n",
+      "Title:  Down Under \n",
+      "    Rating:  4.07\n",
+      "Title:  A Walk in the Woods: Rediscovering America on the Appalachian Trail \n",
+      "    Rating:  4.06\n",
+      "Title:  Bill Bryson: The Complete Notes \n",
+      "    Rating:  4.09\n",
+      "Title:  Journeys in English \n",
+      "    Rating:  3.72\n",
       "Enjoy!\n"
      ]
     }
@@ -21,6 +58,20 @@
    "source": [
     "# Importing libraries\n",
     "import pandas as pd\n",
+    "\n",
+    "def RecMenu():\n",
+    "    print(\"For book recommendation/rating - enter 1 and author review - enter 2\")\n",
+    "    choice = input(\"recommendation/rating - enter 1 and author review - enter 2\")\n",
+    "    if choice == \"1\":\n",
+    "        print(recommendation())\n",
+    "    elif choice == \"2\":\n",
+    "        print(authorSearch())\n",
+    "    else:\n",
+    "        print(\"Wrong Option! Please Retry\")\n",
+    "        #RecMenu()\n",
+    "\n",
+    "RecMenu()\n",
+    "\n",
     "def recommendation():\n",
     "    \n",
     "    # Read csv file into a pandas dataframe\n",
@@ -52,7 +103,58 @@
     "            print(\"Author: \", df_new[['authors']].to_string(index=False, header=False))\n",
     "            print(\"Rating: \", df_new[['rating']].to_string(index=False, header=False))\n",
     "            return \"Enjoy!\"\n",
-    "print(recommendation())"
+    "#print(recommendation())\n",
+    "\n",
+    "\n",
+    "def authorSearch():\n",
+    "    \n",
+    "    # Read csv file into a pandas dataframe\n",
+    "    df = pd.read_csv(\"books.csv\")\n",
+    "    df = df[df.language_code =='eng']\n",
+    "    df['Title'] = df['title'].str.split('(').str[0]\n",
+    "    print(\"Enter name of Author to display \")\n",
+    "    search= input(\"enter to search: author name <full name> \")\n",
+    "    #print(\"Author: \", search )\n",
+    "    df_author = df[df['authors'] == search ]\n",
+    "    if len(df_author) == 0:\n",
+    "        print(\"No book found for author named:\", search)\n",
+    "    else:\n",
+    "        print(\"Total books by this author are \", len(df_author))\n",
+    "        sum = 0\n",
+    "        #print(df_author.iat([0],[0]))\n",
+    "\n",
+    "        \n",
+    "        for item in df_author[\"rating\"]:\n",
+    "            sum = sum + float(item)\n",
+    "        print(\"Average Rating: \", sum/len(df_author))\n",
+    "        \n",
+    "        #print(df_author.columns)\n",
+    "        nTitle = []\n",
+    "        nRating = [] \n",
+    "        for val_ in [\"title\",\"rating\"]:\n",
+    "            for item_ in df_author[val_]:\n",
+    "                if val_ == \"title\":\n",
+    "                    nTitle.append(item_)\n",
+    "                elif val_ ==\"rating\":\n",
+    "                    nRating.append(item_)\n",
+    "        for num_ in range(1,len(nTitle)):\n",
+    "            print(\"Title: \",nTitle[num_],\"\\n    Rating: \",nRating[num_])\n",
+    "        \n",
+    "\n",
+    "        #print(\"Title: \", df_new[['Title']].to_string(index=False, header=False))\n",
+    "        #print(\"Author: \", df_new[['authors']].to_string(index=False, header=False))\n",
+    "        #print(\"Rating: \", df_new[['rating']].to_string(index=False, header=False))\n",
+    "        \"\"\"if search == df[['authors'].to_string(index=False, header=False)]:\n",
+    "        df_new= df.sample(replace=True)[['Title', 'authors',\"rating\"]]\n",
+    "        print(\"Title: \", df_new[['Title']].to_string(index=False, header=False))\n",
+    "        #print(\"Author: \", df_new[['authors']].to_string(index=False, header=False))\n",
+    "        print(\"Rating: \", df_new[['rating']].to_string(index=False, header=False))\n",
+    "        return \"Enjoy!\"\n",
+    "    else:                                                                            # if both ranges are present\n",
+    "                print(\"No books to show, sorry:(\")\n",
+    "    \"\"\"         \n",
+    "    return \"Enjoy!\"\n",
+    "#print(authorSearch())\n"
    ]
   },
   {
@@ -85,9 +187,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -100,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
